correct bad bit-shifting

--- a/examples/boxlayout/index.styl
+++ b/examples/boxlayout/index.styl
@@ -20,7 +20,7 @@ body {
   left: 10px;
   right: 10px;
   bottom: 10px;
-  > .p-Widget {
+  > .p-Panel {
     padding: 8px;
   }
 }
@@ -53,9 +53,8 @@ body {
 .content {
   text-align: center;
   font: 15px Helvetica;
-  background: linear-gradient(180deg, #EEEEEE 0%, #CCCCCC 100%);
-  box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.15),
-              inset -1px -1px 0px rgba(0, 0, 0, 0.3);
+  background: #DDDDDD;
+  border: 1px solid #555555;
   > span {
     line-height: 25px;
   }
